--- a/IOKode.Cloe.Host/IOKode.Cloe.Host.csproj
+++ b/IOKode.Cloe.Host/IOKode.Cloe.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
@@ -7,10 +7,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\IOKode.Cloe.Application\IOKode.Cloe.Application.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+      <ProjectReference Include="..\IOKode.Cloe.InMemoryPersistence\IOKode.Cloe.InMemoryPersistence.csproj" />
+      <ProjectReference Include="..\IOKode.Cloe.Rest\IOKode.Cloe.Rest.csproj" />
     </ItemGroup>
 
 </Project>
