Creating users and updating users.

--- a/IOKode.Cloe.Application/IOKode.Cloe.Application.csproj
+++ b/IOKode.Cloe.Application/IOKode.Cloe.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\IOKode.Cloe.Domain\IOKode.Cloe.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Users\Roles\UseCases" />
+    </ItemGroup>
+
 </Project>
